--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ function checkTime(i) {
     
 <br>
 <div class="weather">
-    <iframe style="align:left"id="forecast_embed" type="text/html" frameborder="0" height="17%" width="90%" src="http://forecast.io/embed/#lat=43.785&lon=-79.6778&name=Brampton&units=si"> </iframe>
+    <iframe id="forecast_embed" type="text/html" frameborder="0" height="17%" width="95%" src="http://forecast.io/embed/#lat=43.785&lon=-79.6778&name=Brampton&units=si"> </iframe>
        </div> 
 
     
