--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <div class="hukam"><iframe src="./hukamnama/hukamnama.html" style="border-width:0" width="95%" height="50%" frameborder="0" scrolling="no"></iframe>
+    <div class="hukam"><iframe src="./hukamnama/hukamnama.html" style="border-width:0" width="95%" height="50%" frameborder="0" scrolling="auto"></iframe>
     </div>
 
 <br>
